syntax = "proto3";

option java_multiple_files= true;
option java_package= "via.sep3.databaseserver.protobuff";

service Users{
  rpc createAccount(CreateAccountMessage) returns (UserMessage);
  rpc login(LoginMessage) returns (BoolMessage);
  rpc getDriver(UsersMessageId) returns (UserMessage);
  rpc updateLicense(LicenseMessage) returns (StatusMessage);
}

message LicenseMessage{
  int32 licenseNo = 1;
  int32 userId = 2;
}

message StatusMessage{
  bool status = 1;
}

message CreateAccountMessage{
  string name = 1;
  optional int32 licenseNo = 2;
  int32 phoneNumber = 3;
  string email = 4;
  string password = 5;
}

message UserMessage{
  //not sure what we actually need on client side
  string name = 1;
  int32 phoneNumber = 2;
  string email = 3;
  optional int32 licenseNumber = 4;
}

message LoginMessage{
  string email = 1;
  string password = 2;
}

message BoolMessage{
  bool status = 1;
  int32 userId = 2;
  optional int32 licenseNo = 3;
}

message UsersMessageId{
  int32 userId = 1;
}

//it's not used but for some reason I can't build the project without it :(
